objects/WRFPrintDependent__mdt.object
<CustomObject>
    <fields>
        <fullName>ChildRenderingFields__c</fullName>
        <label>Child Rendering Fields</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ParentFieldValue__c</fullName>
        <label>ParentFieldValue</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ParentField__c</fullName>
        <label>ParentField</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WRFPrintView__c</fullName>
        <label>WRFPrintView</label>
        <referenceTo>WRFPrintView__mdt</referenceTo>
        <relationshipLabel>WRFPrintDependent</relationshipLabel>
        <relationshipName>WRFPrintDependent</relationshipName>
        <type>MetadataRelationship</type>
    </fields>
    <label>WRFPrintDependent</label>
    <listViews>
        <fullName>All</fullName>
        <columns>ParentField__c</columns>
        <columns>ParentFieldValue__c</columns>
        <columns>ChildRenderingFields__c</columns>
        <columns>WRFPrintView__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <columns>MasterLabel</columns>
        <columns>DeveloperName</columns>
        <columns>NamespacePrefix</columns>
        <columns>ChildRenderingFields__c</columns>
        <columns>ParentField__c</columns>
        <columns>ParentFieldValue__c</columns>
        <columns>WRFPrintView__c</columns>
        <filterScope>Everything</filterScope>
        <label>All1</label>
    </listViews>
    <listViews>
        <fullName>Commercial</fullName>
        <columns>MasterLabel</columns>
        <columns>DeveloperName</columns>
        <columns>NamespacePrefix</columns>
        <columns>ChildRenderingFields__c</columns>
        <columns>ParentField__c</columns>
        <columns>ParentFieldValue__c</columns>
        <columns>WRFPrintView__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>MasterLabel</field>
            <operation>contains</operation>
            <value>Commer</value>
        </filters>
        <label>Commercial</label>
    </listViews>
    <listViews>
        <fullName>Recall</fullName>
        <columns>MasterLabel</columns>
        <columns>ChildRenderingFields__c</columns>
        <columns>ParentField__c</columns>
        <columns>ParentFieldValue__c</columns>
        <columns>WRFPrintView__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>MasterLabel</field>
            <operation>contains</operation>
            <value>Recall</value>
        </filters>
        <label>Recall</label>
    </listViews>
    <listViews>
        <fullName>VinSolution</fullName>
        <columns>ChildRenderingFields__c</columns>
        <columns>ParentField__c</columns>
        <columns>ParentFieldValue__c</columns>
        <columns>WRFPrintView__c</columns>
        <columns>MasterLabel</columns>
        <columns>DeveloperName</columns>
        <columns>IsProtected</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>MasterLabel</field>
            <operation>contains</operation>
            <value>Vin</value>
        </filters>
        <label>Vin Solution</label>
    </listViews>
    <pluralLabel>WRFPrintDependent</pluralLabel>
</CustomObject>